# rust-solid-app

./: .gitignore  README.md  package.json  pnpm-workspace.yaml  turbo.json
apps/api/: Cargo.toml  README.md  build.sh
apps/api/migrations/20231018115154_create_users/: up.sql
apps/api/src/: auth.rs  config.rs  database.rs  errors.rs  files.rs  helpers.rs  main.rs  routes.rs  schema.rs  server.rs  state.rs  swagger.rs  validate.rs
apps/api/src/handlers/: auth.rs  health.rs  user.rs
apps/api/src/middleware/: auth.rs
apps/api/src/models/: user.rs
apps/api/src/tests/: helpers.rs
apps/web/: .eslintignore  .eslintrc-auto-import.json  .eslintrc.js  .stylelintrc.js  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: .eslintrc.js  index.tsx
apps/web/src/app/: App.tsx
apps/web/src/pages/: Routing.tsx
apps/web/src/pages/Home/: Home.styles.ts  Home.tsx
apps/web/src/shared/api/: http-client.ts
apps/web/src/shared/api/health/: health.ts
apps/web/src/shared/api/http/: index.ts
apps/web/src/shared/api/http/__generated__/: Auth.ts  Health.ts  User.ts  data-contracts.ts  http-client.ts
apps/web/src/shared/styles/: base.css
apps/web/src/shared/utils/: env.ts  index.ts  lazyImport.ts
apps/web/src/widgets/Footer/: Footer.styles.ts  Footer.tsx
apps/web/src/widgets/Page/: Page.styles.ts  Page.tsx
apps/web/tool/: codegen-api.js
apps/web/tool/templates/: api.eta  axios-http-client.eta  data-contracts.eta  http-client.eta  procedure-call.eta  route-type.eta
apps/web/types/: auto-imports.d.ts  external.d.ts
internal/eslint-config/: .eslintrc.js  build.config.ts  package.json  tsconfig.json
internal/eslint-config/src/: index.ts  solid.ts
internal/tsconfig/: package.json  tsconfig.common.json  tsconfig.node.json  tsconfig.solid.json
internal/types/: .eslintrc.js  build.config.ts  package.json
internal/types/src/: http.ts  utils.ts
