[package]
name = "api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-identity = "0.4"
actix-rt = "2.9.0"
actix-web = "4.4.0"
argon2rs = "0.2.5"
chrono = { version = "0.4.31", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.1.3", features = [
    "postgres",
    "uuid",
    "r2d2",
    "chrono",
] }
dotenv = "0.15.0"
env_logger = "0.10.0"
envy = "0.4.2"
futures = "0.3.28"
lazy_static = "1.4.0"
listenfd = "1.0.1"
r2d2 = "0.8.10"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sparkpost = "0.5.4"
time = "0.3.29"
uuid = { version = "1.4.1", features = ["serde", "v4"] }

# Dependencies related to swagger
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
actix-files = "0.6.2"
