[package]
name = "api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-identity = "0.4"
actix-rt = "2.9.0"
actix-service = "2.0.2"
actix-test = "0.1.2"
actix-files = "0.6.2"
actix-web = "4.4.0"
argon2rs = "0.2.5"
chrono = { version = "0.4.31", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.1.4", features = [
    "postgres",
    "uuid",
    "r2d2",
    "chrono",
] }
dotenv = "0.15.0"
env_logger = "0.10.0"
envy = "0.4.2"
futures = "0.3.29"
lazy_static = "1.4.0"
listenfd = "1.0.1"
log = "0.4.20"
rayon = "1.8.0"
r2d2 = "0.8.10"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.107"
sparkpost = "0.5.4"
time = "0.3.29"
jsonwebtoken = "9.1.0"
validator = "0.16.1"
validator_derive = "0.16.0"
uuid = { version = "1.4.1", features = ["serde", "v4"] }

# Dependencies related to swagger
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
